# ASTMatcher

./: CMakeLists.txt  ReadMe.md  main.cpp
include/ClangTidy/: UseAfterMoveCheck.h
include/ClangTidy/utils/: ExprSequence.h  UseAfterMoveUtils.h
include/tutor/: CodeStyleChecker.h  LACommenter.h  Obfuscator.h  PrintFunctionsAction.h  UnusedForLoopVar.h
test/ClangTidy/UseAfterMove/: IfMove.cpp  complexMove.cpp  normalMove.cpp
test/tutor/: functions.c
test/tutor/CodeStyleChecker/: Anonymous.cpp  Function.cpp  Macro.cpp  TypesAndVars.cpp  Underscore.cpp
test/tutor/LAC/: Bool.cpp  ClassLong.cpp  Long.cpp  String.cpp
test/tutor/OBF/: float_add.cpp  float_sub.cpp  int_add.cpp  int_sub.cpp  multi_int_add.cpp
test/tutor/UnusedForLoopVar/: nested.cpp  range-loop.cpp  range_loop_macro.cpp  regular_loop.cpp  regular_loop_function_macro.cpp  regular_loop_ignored.cpp  regular_loop_macro.cpp  regular_nested_loop.cpp
